--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 	<!---start header---->
 	<header>
 		<a href="#" class="logo">
-			<img src="img/logo.svg">
+			<img src="img/logo.png">
 		</a>
 
 		<ul class="navbar">
@@ -65,8 +65,8 @@
 				<img src="img/con1.svg">
 			</div>
 			<div class="container-text">
-				<h4>5K</h4>
-				<p>Online Courses</p>
+				<h4>Coding Class</h4>
+				<p>Online, Offline Courses</p>
 			</div>
 		</div>
 
@@ -75,8 +75,8 @@
 				<img src="img/con2.svg">
 			</div>
 			<div class="container-text">
-				<h4>5K</h4>
-				<p>Online Courses</p>
+				<h4>Career councling</h4>
+				<p>Online, Offline Courses</p>
 			</div>
 		</div>
 
@@ -85,8 +85,8 @@
 				<img src="img/con3.svg">
 			</div>
 			<div class="container-text">
-				<h4>5K</h4>
-				<p>Online Courses</p>
+				<h4>Industrial Project</h4>
+				<p>Online, Offline Courses</p>
 			</div>
 		</div>
 
@@ -95,8 +95,8 @@
 				<img src="img/con4.svg">
 			</div>
 			<div class="container-text">
-				<h4>5K</h4>
-				<p>Online Courses</p>
+				<h4>Job Placement</h4>
+				<p>Online, Offline Courses</p>
 			</div>
 		</div>
 
@@ -112,25 +112,25 @@
 		<div class="categories-content">
 			<div class="box">
 				<img src="img/cate1.png">
-				<h3>Angular Development</h3>
+				<h3>Full Stack Development</h3>
 				<p>5 Courses</p>
 			</div>
 
 			<div class="box">
 				<img src="img/cate2.png">
-				<h3>Angular Development</h3>
+				<h3>Machine learning</h3>
 				<p>5 Courses</p>
 			</div>
 
 			<div class="box">
 				<img src="img/cate3.png">
-				<h3>Angular Development</h3>
+				<h3>Data Science</h3>
 				<p>5 Courses</p>
 			</div>
 
 			<div class="box">
 				<img src="img/cate4.png">
-				<h3>Angular Development</h3>
+				<h3>Robotics </h3>
 				<p>5 Courses</p>
 			</div>
 
@@ -152,9 +152,9 @@
 			<div class="row">
 				<img src="img/course1.jpg">
 				<div class="courses-text">
-					<h5>$20.00</h5>
+					<h5>Rs. 4999</h5>
 					<h3>The Complete HTML CSS JS Course 2022</h3>
-					<h6>05 hours 15 minutes</h6>
+					<h6>50 hours</h6>
 					<div class="rating">
 						<div class="star">
 							<a href="#"><i class='bx bxs-star' ></i></a>
@@ -173,9 +173,9 @@
 			<div class="row">
 				<img src="img/course2.jpg">
 				<div class="courses-text">
-					<h5>$20.00</h5>
-					<h3>The Complete HTML CSS JS Course 2022</h3>
-					<h6>05 hours 15 minutes</h6>
+					<h5>Rs. 4999</h5>
+					<h3>Full stack Development</h3>
+					<h6>100 hours</h6>
 					<div class="rating">
 						<div class="star">
 							<a href="#"><i class='bx bxs-star' ></i></a>
@@ -194,7 +194,7 @@
 			<div class="row">
 				<img src="img/course3.jpg">
 				<div class="courses-text">
-					<h5>$20.00</h5>
+					<h5>Rs. 4999</h5>
 					<h3>The Complete HTML CSS JS Course 2022</h3>
 					<h6>05 hours 15 minutes</h6>
 					<div class="rating">
@@ -215,9 +215,9 @@
 			<div class="row">
 				<img src="img/course4.jpg">
 				<div class="courses-text">
-					<h5>$20.00</h5>
-					<h3>The Complete HTML CSS JS Course 2022</h3>
-					<h6>05 hours 15 minutes</h6>
+					<h5>Rs. 4999</h5>
+					<h3>Data Science</h3>
+					<h6>70 hrs</h6>
 					<div class="rating">
 						<div class="star">
 							<a href="#"><i class='bx bxs-star' ></i></a>
@@ -236,9 +236,9 @@
 			<div class="row">
 				<img src="img/course5.jpg">
 				<div class="courses-text">
-					<h5>$20.00</h5>
-					<h3>The Complete HTML CSS JS Course 2022</h3>
-					<h6>05 hours 15 minutes</h6>
+					<h5>Rs. 4999</h5>
+					<h3>Robotics</h3>
+					<h6>25 Hours</h6>
 					<div class="rating">
 						<div class="star">
 							<a href="#"><i class='bx bxs-star' ></i></a>
@@ -257,9 +257,9 @@
 			<div class="row">
 				<img src="img/course1.jpg">
 				<div class="courses-text">
-					<h5>$20.00</h5>
-					<h3>The Complete HTML CSS JS Course 2022</h3>
-					<h6>05 hours 15 minutes</h6>
+					<h5>Rs. 4999</h5>
+					<h3>Node Js</h3>
+					<h6>35 Hours</h6>
 					<div class="rating">
 						<div class="star">
 							<a href="#"><i class='bx bxs-star' ></i></a>
@@ -291,15 +291,15 @@
 
 		<div class="cta-content">
 			<div class="cta-img">
-				<img src="img/cta1.png">
+				<img src="img/pani.png">
 			</div>
 
 			<div class="cta-img">
-				<img src="img/cta2.png">
+				<img src="img/sathya.png">
 			</div>
 
 			<div class="cta-img">
-				<img src="img/cta3.png">
+				<img src="img/srm-logo.svg.gzip">
 			</div>
 
 			<div class="cta-img">
@@ -336,7 +336,7 @@
 	<section class="contact" id="contact">
 		<div class="main-contact">
 			<div class="contact-content">
-				<img src="img/logo.svg">
+				<img src="img/logo.png">
 				<li><a href="#">Facebook</a></li>
 				<li><a href="#">Instagram</a></li>
 				<li><a href="#">Twitter</a></li>
@@ -359,16 +359,16 @@
 			</div>
 
 			<div class="contact-content">
-				<li><a href="#">San Francisco,<br> California, CA 94108</a></li>
-				<li><a href="#">dreamslms@example.com</a></li>
-				<li><a href="#">01646895741</a></li>
+				<li><a href="#">A1-11,TNHB<br> Kumaran Nagar, Chennai-600097</a></li>
+				<li><a href="#">alagurajabar@gmail.com</a></li>
+				<li><a href="#">+91 850 860 8328</a></li>
 			</div>
 
 		</div>
 	</section>
 
 	<div class="last-text">
-		<p>© 2022 Tahmid Ahmed. All rights reserved.</p>
+		<p>© 2023 Alagu Raja. All rights reserved.</p>
 	</div>
 
 	<!---custom js link---->
